# memoant

./: .gitignore  CLAUDE.md  README.md  SESSION_STATUS.md  SETUP_CHECKLIST.md  WindowPicker  WindowPickerThumbs.swift  WindowRecorder  WindowRecorder.swift  install.sh  pyproject.toml  record-meeting.sh  record-window.sh  record.sh  test-picker.sh  window-recorder.applescript
launchd/: com.memoant.plist
raycast/: record-audio.sh  record-screen.sh  stop-recording.sh
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: meeting-history.tsx  menu-bar.tsx  record-audio.tsx  record-screen.tsx  recording-status.tsx  shared.ts  stop-recording.tsx
scripts/: process_file.py  watch.py
src/memoant/: __init__.py  audio.py  calendar_match.py  chunker.py  cli.py  config.py  db.py  devices.py  diarize.py  markdown.py  merge.py  pipeline.py  recorder.py  structure.py  transcribe.py  watcher.py
swift/: Makefile  WindowPicker.swift  WindowPickerThumbs.swift  WindowRecorder.swift
web/public/: install.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: feature-card.tsx  nav.tsx  step-card.tsx  tech-badge.tsx  terminal-demo.tsx
